# Essentia

./: README.md
.github/workflows/: PythonTests.yml  tests.yml
docs/: README.md
docs/WorkShop-1/: README.md
docs/WorkShop-2/: README.md
src/: docker-compose.yml
src/APIGateway/: traefik.yml
src/APIGateway/dynamic/: config.yml
src/db/mysql/: init.sql
src/db/postgres/: init.sql
src/frontend/essentia_frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/essentia_frontend/app/admin/: page.tsx
src/frontend/essentia_frontend/app/login/: page.tsx
src/frontend/essentia_frontend/app/profile/: page.tsx
src/frontend/essentia_frontend/app/register/: page.tsx
src/frontend/essentia_frontend/components/: back-button.tsx  header.tsx  perfume-card.tsx  perfume-filters.tsx  perfume-form.tsx  perfume-image-slider.tsx  perfume-table.tsx
src/frontend/essentia_frontend/hooks/: use-auth.ts  use-perfume-store.ts
src/java-backend/: .dockerignore  .gitignore  Dockerfile  HELP.md  README.md  docker-compose.yml  pom.xml
src/python-backend/: Dockerfile  README.md  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_perfume.py
src/python-backend/.github/workflows/: tests.yaml
src/python-backend/routes/: perfume.py
src/python-backend/src/: db.py  main.py  models.py  schemas.py  test_perfume.py
src/python-backend/src/acceptance_tests/features/: environment.py  perfumes.feature
src/python-backend/src/acceptance_tests/features/steps/: perfumes_steps.py
src/python-backend/src/routes/: perfume.py
src/python-backend/src/tests/: test_perfume.py
src/python-backend/tests/: test_perfume.py
(+28 files in other folders)
